--- a/COTS/STM32F446_Drivers/.cproject
+++ b/COTS/STM32F446_Drivers/.cproject
@@ -71,6 +71,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="HAL/RTC"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Inc"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="MCAL/DMA"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="MCAL/EXTI"/>
